force-app/main/default/objects/WorkOrder/fields/Alarm_Code__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Code__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>Alarm Code</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>