force-app/main/default/objects/WorkOrder/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillingAddress</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>