force-app/main/default/objects/WorkOrder/fields/Collected_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Collected_Gallons__c</fullName>
    <description>Total Gallons collected from the Restaurant</description>
    <label>Collected Gallons</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>