force-app/main/default/objects/WorkOrder/fields/Commodity_Value__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Value__c</fullName>
    <description>Source from Custom Label Commodity Value / UCO Gallon Value</description>
    <label>Commodity Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>