force-app/main/default/objects/WorkOrder/fields/Connected_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Connected_Fixture__c</fullName>
    <label>Connected Fixture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected Fixture</fullName>
            </value>
            <value>
                <fullName>Wok</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Spray Sink</fullName>
            </value>
            <value>
                <fullName>Mop</fullName>
            </value>
            <value>
                <fullName>multi-comp sink</fullName>
            </value>
            <value>
                <fullName>single-comp sink</fullName>
            </value>
            <value>
                <fullName>Dish Sink</fullName>
            </value>
            <value>
                <fullName>Prep Sink</fullName>
            </value>
            <value>
                <fullName>3 comp sink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>