force-app/main/default/objects/WorkOrder/fields/Container_Fill__c.field-meta.xml
<CustomField>
    <fullName>Container_Fill__c</fullName>
    <label>Container Fill</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>