force-app/main/default/objects/WorkOrder/fields/Container_Size_1__c.field-meta.xml
<CustomField>
    <fullName>Container_Size_1__c</fullName>
    <description>Source from UCO Service</description>
    <label>Container Size #1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Indoor_Outdoor__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Container_Size</valueSetName>
    </valueSet>
</CustomField>