force-app/main/default/objects/WorkOrder/fields/Current_Fill_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Fill_Level__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status, &quot;Completed&quot;),
        ISPICKVAL(Status, &quot;Rejected&quot;),
        ISPICKVAL(Status, &quot;Failed&quot;)
    ),
    /* If Status is Completed/Rejected/Failed */
    IF(
        OR(
            ISBLANK(Last_Completed_Date__c),
            ISBLANK(Gallons_Per_Month__c),
            ISBLANK(Optimo_Date__c)
        ),
        0,
        MAX(0, (Gallons_Per_Month__c / 30) * (Optimo_Date__c - Last_Completed_Date__c))
    ),
    /* If Status is anything else (Draft, In Progress, etc.) */
    IF(
        OR(
            ISBLANK(Last_Completed_Date__c),
            ISBLANK(Gallons_Per_Month__c)
        ),
        0,
        MAX(0, (Gallons_Per_Month__c / 30) * (TODAY() - Last_Completed_Date__c))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fill Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>