force-app/main/default/objects/WorkOrder/fields/Days_Since_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Invoice__c</fullName>
    <formula>IF(
  ISBLANK(Invoice_Request_Date__c),
  NULL,
  TODAY() - DATEVALUE(Invoice_Request_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>