force-app/main/default/objects/WorkOrder/fields/Delta_Days_QBO__c.field-meta.xml
<CustomField>
    <fullName>Delta_Days_QBO__c</fullName>
    <label>Delta Days QBO</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>