force-app/main/default/objects/WorkOrder/fields/Distance_mi__c.field-meta.xml
<CustomField>
    <fullName>Distance_mi__c</fullName>
    <label>Distance [mi]</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>