force-app/main/default/objects/WorkOrder/fields/Door_Code__c.field-meta.xml
<CustomField>
    <fullName>Door_Code__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>Door Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>