force-app/main/default/objects/WorkOrder/fields/Door_Key__c.field-meta.xml
<CustomField>
    <fullName>Door_Key__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>Door Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>