force-app/main/default/objects/WorkOrder/fields/Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assigned__c</fullName>
    <label>Driver Assigned</label>
    <length>32</length>
    <type>Text</type>
</CustomField>