force-app/main/default/objects/WorkOrder/fields/Driver_Notes__c.field-meta.xml
<CustomField>
    <fullName>Driver_Notes__c</fullName>
    <label>Driver / POD Notes</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>