force-app/main/default/objects/WorkOrder/fields/Driver_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Serial_Number__c</fullName>
    <label>Driver Serial Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>#103</fullName>
            </value>
            <value>
                <fullName>#251</fullName>
            </value>
            <value>
                <fullName>#370</fullName>
            </value>
            <value>
                <fullName>#523</fullName>
            </value>
            <value>
                <fullName>#551</fullName>
            </value>
            <value>
                <fullName>#642</fullName>
            </value>
            <value>
                <fullName>#643</fullName>
            </value>
            <value>
                <fullName>#650</fullName>
            </value>
            <value>
                <fullName>#751</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>