force-app/main/default/objects/WorkOrder/fields/Duration_In_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Mins__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>Duration In Mins</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>