force-app/main/default/objects/WorkOrder/fields/Failure_Action_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Failure_Action_Assigned_To__c</fullName>
    <description>Populated during WO Failure from Custom Metadata Work Order Status Mapping</description>
    <label>Failure Action Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>