force-app/main/default/objects/WorkOrder/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot Find Grease Trap</fullName>
            </value>
            <value>
                <fullName>Cannot Find UCO Container</fullName>
            </value>
            <value>
                <fullName>Customer No-Show</fullName>
            </value>
            <value>
                <fullName>Door Code Not Working</fullName>
            </value>
            <value>
                <fullName>Door Key Not Working</fullName>
            </value>
            <value>
                <fullName>Driver Missing Tools</fullName>
            </value>
            <value>
                <fullName>Forgot Door Key</fullName>
            </value>
            <value>
                <fullName>Lock Box Code Not Working</fullName>
            </value>
            <value>
                <fullName>Lox Box Missing</fullName>
            </value>
            <value>
                <fullName>Outside service window</fullName>
            </value>
            <value>
                <fullName>UCO Container Empty</fullName>
            </value>
            <value>
                <fullName>Behind Schedule</fullName>
            </value>
            <value>
                <fullName>Vehicle Not Working</fullName>
            </value>
            <value>
                <fullName>CRS: Wrong Day</fullName>
            </value>
            <value>
                <fullName>CRS: Outside Service Window</fullName>
            </value>
            <value>
                <fullName>CRS: Too Busy</fullName>
            </value>
            <value>
                <fullName>CRS: Does Not Want Service</fullName>
            </value>
            <value>
                <fullName>CRS: Access Time/Days Have Changed</fullName>
            </value>
            <value>
                <fullName>Incorrect Daily Availability</fullName>
            </value>
            <value>
                <fullName>Door Key Missing</fullName>
            </value>
            <value>
                <fullName>GT Not Accessible</fullName>
            </value>
            <value>
                <fullName>Customer Refused Service</fullName>
            </value>
            <value>
                <fullName>Missing Correct Equipment</fullName>
            </value>
            <value>
                <fullName>Lock/Code Changed</fullName>
            </value>
            <value>
                <fullName>Incorrect Vehicle</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Behind Schedule 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>