force-app/main/default/objects/WorkOrder/fields/FOG_Report_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>FOG_Report_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOG Report Reviewed</label>
    <type>Checkbox</type>
</CustomField>