force-app/main/default/objects/WorkOrder/fields/Gallons_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Gallons_Per_Month__c</fullName>
    <label>Monthly Gallons</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>