force-app/main/default/objects/WorkOrder/fields/GRD_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>GRD_Location_Name__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>GRD Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>