force-app/main/default/objects/WorkOrder/fields/GRD_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>GRD_Serial_Number__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>GRD Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>