force-app/main/default/objects/WorkOrder/fields/GRD_Size__c.field-meta.xml
<CustomField>
    <fullName>GRD_Size__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>GRD Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>