force-app/main/default/objects/WorkOrder/fields/Grease_Trap_Unit__c.field-meta.xml
<CustomField>
    <fullName>Grease_Trap_Unit__c</fullName>
    <label>Grease Trap Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>