force-app/main/default/objects/WorkOrder/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <label>Invoice Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>