force-app/main/default/objects/WorkOrder/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(
  ISPICKVAL(Payment_Status__c, &quot;Pending&quot;),
  TODAY() - DATEVALUE(Invoice_Request_Date__c) &gt; 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>