force-app/main/default/objects/WorkOrder/fields/Last_Collected_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Last_Collected_Gallons__c</fullName>
    <description>Field populated during WO completion from Mulesoft</description>
    <label>Last Collected Gallons</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>