force-app/main/default/objects/WorkOrder/fields/Last_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Date__c</fullName>
    <description>Last Completed Date populates from Service</description>
    <label>Last Completed Date</label>
    <type>Date</type>
</CustomField>