force-app/main/default/objects/WorkOrder/fields/Last_Optimo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Optimo_Sync__c</fullName>
    <description>Last Sync Date/Time from Optimo to Salesforce</description>
    <label>Last Optimo Sync</label>
    <type>DateTime</type>
</CustomField>