force-app/main/default/objects/WorkOrder/fields/MWO_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>MWO_Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>