force-app/main/default/objects/WorkOrder/fields/MWO_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>MWO_Time_Window__c</fullName>
    <label>Time Window</label>
    <length>100</length>
    <type>Text</type>
</CustomField>