force-app/main/default/objects/WorkOrder/fields/No_Of_Gallons_Per_Fryer__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Gallons_Per_Fryer__c</fullName>
    <description>No. Of Gallons Per Fryer is sourced from UCO Services</description>
    <label>No. Of Gallons Per Fryer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>