force-app/main/default/objects/WorkOrder/fields/Number_Of_Stops__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Stops__c</fullName>
    <label>Number Of Stops</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>