force-app/main/default/objects/WorkOrder/fields/Oil_Change_Schedule_Days__c.field-meta.xml
<CustomField>
    <fullName>Oil_Change_Schedule_Days__c</fullName>
    <description>Oil Change Schedule (Days) is sourced from Services</description>
    <label>Oil Change Schedule (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>