force-app/main/default/objects/WorkOrder/fields/Optimo_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Optimo_Completed_At__c</fullName>
    <label>Optimo Completed At</label>
    <type>DateTime</type>
</CustomField>