force-app/main/default/objects/WorkOrder/fields/Optimo_Date__c.field-meta.xml
<CustomField>
    <fullName>Optimo_Date__c</fullName>
    <label>Optimo Date</label>
    <type>Date</type>
</CustomField>