force-app/main/default/objects/WorkOrder/fields/Optimo_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Optimo_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Optimo Order Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>