force-app/main/default/objects/WorkOrder/fields/OptimoRoute_Error__c.field-meta.xml
<CustomField>
    <fullName>OptimoRoute_Error__c</fullName>
    <label>OptimoRoute Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>