force-app/main/default/objects/WorkOrder/fields/OptimoRoute_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>OptimoRoute_Last_Sync__c</fullName>
    <label>OptimoRoute Last Sync</label>
    <type>DateTime</type>
</CustomField>