force-app/main/default/objects/WorkOrder/fields/OptimoRoute_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>OptimoRoute_Order_Id__c</fullName>
    <label>OptimoRoute Order Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>