force-app/main/default/objects/WorkOrder/fields/OptimoRoute_OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OptimoRoute_OrderNo__c</fullName>
    <label>OptimoRoute OrderNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>