force-app/main/default/objects/WorkOrder/fields/Order_Tracking_Destination__c.field-meta.xml
<CustomField>
    <fullName>Order_Tracking_Destination__c</fullName>
    <label>Order Tracking Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>