force-app/main/default/objects/WorkOrder/fields/Order_Tracking_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Order_Tracking_Error_Message__c</fullName>
    <label>Order Tracking Error Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>