force-app/main/default/objects/WorkOrder/fields/Order_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Tracking_URL__c</fullName>
    <description>Stores Order tracking url</description>
    <label>Order Tracking URL</label>
    <type>Url</type>
</CustomField>