force-app/main/default/objects/WorkOrder/fields/Previous_Vendo__c.field-meta.xml
<CustomField>
    <fullName>Previous_Vendo__c</fullName>
    <label>Previous Vendo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mahoney</fullName>
            </value>
            <value>
                <fullName>Oregon Oils</fullName>
            </value>
            <value>
                <fullName>DarPro</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>River City</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>