force-app/main/default/objects/WorkOrder/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <label>Product Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>