force-app/main/default/objects/WorkOrder/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>