force-app/main/default/objects/WorkOrder/fields/Repeat__c.field-meta.xml
<CustomField>
    <fullName>Repeat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat</label>
    <type>Checkbox</type>
</CustomField>